// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlayerControls renders correctly 1`] = `
<div>
  <a
    className="previous-button"
    onClick={[Function]}
  />
  <a
    className="play-button"
    onClick={[Function]}
  />
  <a
    className="next-button"
    onClick={[Function]}
  />
</div>
`;

exports[`PlayerControls renders correctly 2`] = `
<div>
  <a
    className="previous-button"
    onClick={[Function]}
  />
  <a
    className="play-button"
    onClick={[Function]}
  />
  <a
    className="next-button"
    onClick={[Function]}
  />
</div>
`;

exports[`PlayerControls renders correctly 3`] = `
<div>
  <a
    className="previous-button"
    onClick={[Function]}
  />
  <a
    className="pause-button"
    onClick={[Function]}
  />
  <a
    className="next-button"
    onClick={[Function]}
  />
</div>
`;

exports[`PlayerControls renders previous, next or play/pause button correctly 1`] = `
<PlayerControls
  onNext={[Function]}
  onPlayPause={[Function]}
  onPrevious={[Function]}
  showNextButton={false}
  showPlayPauseButton={false}
  showPreviousButton={true}
>
  <div>
    <a
      className="previous-button"
      onClick={[Function]}
    />
  </div>
</PlayerControls>
`;

exports[`PlayerControls renders previous, next or play/pause button correctly 2`] = `
<PlayerControls
  onNext={[Function]}
  onPlayPause={[Function]}
  onPrevious={[Function]}
  showNextButton={false}
  showPlayPauseButton={true}
  showPreviousButton={false}
>
  <div>
    <a
      className="play-button"
      onClick={[Function]}
    />
  </div>
</PlayerControls>
`;

exports[`PlayerControls renders previous, next or play/pause button correctly 3`] = `
<PlayerControls
  onNext={[Function]}
  onPlayPause={[Function]}
  onPrevious={[Function]}
  showNextButton={true}
  showPlayPauseButton={false}
  showPreviousButton={false}
>
  <div>
    <a
      className="next-button"
      onClick={[Function]}
    />
  </div>
</PlayerControls>
`;
